--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+#timer {
+  text-align:right;
+}
+
+nav {
+  padding: 5px;
+}
+
 main {
   margin: auto;
   width: 50%;
@@ -6,3 +14,4 @@ main {
   text-align: center;
   margin-top: 4rem;
 }
+
